--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+anon-gw-anonymizer-config (3:1.6.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 25 Nov 2015 19:02:38 +0000
+
 anon-gw-anonymizer-config (3:1.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
